<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activiteis.MainActivity"
    android:padding="8sp"
    android:gravity="center"
    android:background="#F8F8F0">
<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/almardya"
    android:gravity="center"
    android:textSize="28sp"
    android:textStyle="bold"
    android:textColor="@color/black_overlay"
    android:layout_marginTop="20sp"
   />
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        >
        <!--on below line we are creating a grid view-->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:columnCount="2"
            android:layout_margin="20dp"
            android:paddingBottom="40sp">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_rowWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/light_blue_600"
                    android:padding="5dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sunrise_com"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azkar_alsba7"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:padding="6dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/black_overlay"
                    android:padding="5dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_night_moon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azkar_almasa"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_gravity="bottom|center"
                        android:gravity="bottom"
                        android:padding="6dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_rowWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/teal_200"
                    android:padding="5dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mosque"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azkar_almasjed"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:padding="6dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_rowWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/kh"
                    android:padding="5dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_muslim_prayer"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azkar_alsalah"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:padding="6dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_rowWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/hg"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_food_donation"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zakat_almal"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:padding="6dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/teal_700"
                    android:padding="5dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_prayer_beads"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tasbeh"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:padding="6dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_rowWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/gego"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sleep"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azkar_alnawm"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:padding="6dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/green_happy"
                    android:padding="5dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_morning_clock"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azkar_alestgaz"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:padding="6dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>





        </GridLayout>


    </ScrollView>


</RelativeLayout>
